# apue

./: .gitignore  CMakeLists.txt  Make.define.linux  Make.define.macos  Makefile  README.md  main.c  systype.sh
advanceIO/: Makefile  big_endian.c  dead_flock_test.c  non_block.c  rot13.c  rot13.txt
daemon/: Makefile  already_running.c  daemonize.c  main.c  reread.c  set_close_exec.c
dir/: ls.c  stdin_fileno.c
error/: Makefile  errno.c
fileIO/: Makefile  hole.c  lseek.c
files/: Makefile  filetype.c
ics/: access_patterns.c  memory_referencing_bug.c  readme.md
include/: apue.h
ipc/: Makefile  pipe.c
lib/: CMakeLists.txt  Makefile  apue.c  apue.h  clr_fl.c  err_exit.c  error.c  lock_reg.c  lock_test.c  lockfile.c  pr_exit.c  set_cloexec.c  set_fl.c  tellwait.c
limits/: ISO.c  Makefile  XSI.c
permissions/: Makefile  access.c
pid/: Makefile  child_exec.c  getpid.c  signal.c
process/: .acct2.c.swp  Makefile  acct1.c  acct2.c  atexit.c  echoall.c  echoarg.c  environ.c  exec.c  getpriority.c  race.c  race_wait.c  test-sys.c  tsys.c  wait.c  waitpid.c
pthread/: Makefile  mutex_timedlock.c  print_ids.c  thread_join.c  wrlock.c
signals/: Makefile  sleep1.c
socket/: Makefile  addrinfo.c  getnet.c  hostent.c
standardIO/: Makefile  binary_io_fread.c  binary_io_fwrite.c  character_io.c  check_orientation.c  line_io.c  stream_size.c  tmp_dir.c  tmp_file.c
sys/: Makefile  find.sh  hostname.c  passwd.c  time.c  uname.c
terminalIO/: Makefile
user/: Makefile  id.c
